# hempire

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: frontend.yml  haskell.yml
backend/: CLAUDE.md  cabal.project  fourmolu.yaml  stan.toml
backend/crm-core/: crm-core.cabal
backend/crm-core/src/Crm/: Core.hs
backend/crm-core/src/Crm/Core/: Contact.hs  Customer.hs  Domain.hs  Repository.hs
backend/crm-core/test/: Main.hs
backend/crm-core/test/Crm/Core/: CustomerSpec.hs  ValidationSpec.hs
backend/crm-interpreters/: crm-interpreters.cabal
backend/crm-interpreters/src/Crm/Interpreter/Repository/: Mock.hs  Postgres.hs
backend/crm-interpreters/test/: Main.hs
backend/crm-interpreters/test/Crm/Core/: ContactSpec.hs  CustomerSpec.hs
backend/crm-public/: crm-public.cabal
backend/crm-public/src/Crm/: Types.hs
backend/crm-worker/: crm-worker.cabal
backend/crm-worker/src/: Main.hs
backend/crm-worker/src/Crm/Worker/: Handler.hs
backend/crm/crm-api/: crm-api.cabal
backend/crm/crm-api-internal/: crm-api-internal.cabal
backend/crm/crm-api-internal/src/: Main.hs
backend/crm/crm-api-internal/src/Crm/: Auth.hs  Handlers.hs
backend/crm/crm-api/src/: Main.hs
backend/crm/crm-api/src/Crm/: Auth.hs  Handlers.hs
backend/crm/crm-core/: crm-core.cabal
backend/crm/crm-core/src/Crm/: Core.hs
backend/crm/crm-core/src/Crm/Core/: Customer.hs  CustomerContext.hs  Domain.hs  Idp.hs  Repository.hs
backend/crm/crm-core/test/: Main.hs
backend/crm/crm-core/test/Crm/Core/: CustomerSpec.hs
backend/crm/crm-core/test/Crm/Interpreter/Idp/: Mock.hs
backend/crm/crm-core/test/Crm/Interpreter/Repository/: Mock.hs
backend/crm/crm-interpreters/: crm-interpreters.cabal
backend/crm/crm-interpreters/src/Crm/: AppEnv.hs
backend/crm/crm-interpreters/src/Crm/Interpreter/: CustomerContext.hs  Error.hs
backend/crm/crm-interpreters/src/Crm/Interpreter/Idp/: Zitadel.hs
backend/crm/crm-interpreters/src/Crm/Interpreter/Repository/: Mock.hs  Postgres.hs
backend/crm/crm-interpreters/test/Crm/Core/: CustomerSpec.hs
backend/crm/crm-public/: crm-public.cabal
backend/crm/crm-public/src/Crm/: Types.hs
backend/crm/crm-public/src/Crm/Types/: Command.hs  Event.hs  IdpType.hs  Invite.hs  Response.hs
backend/crm/crm-worker/: crm-worker.cabal
backend/crm/migrations/: 000001_init.down.sql  000001_init.up.sql  (+2 more)
backend/hempire-effects/: hempire-effects.cabal
backend/hempire-effects/src/Hempire/: Prelude.hs
backend/hempire-effects/src/Hempire/Effect/: Auth.hs  Database.hs  IdGen.hs  Logging.hs
backend/hempire-interpreters/: hempire-interpreters.cabal
backend/hempire-interpreters/src/Hempire/: AppEnv.hs
backend/hempire-interpreters/src/Hempire/Interpreter/Auth/: IORef.hs
backend/hempire-interpreters/src/Hempire/Interpreter/Database/: Mock.hs
backend/hempire-interpreters/src/Hempire/Interpreter/Events/: Outbox.hs
backend/hempire-interpreters/src/Hempire/Interpreter/IdGen/: Mock.hs  Real.hs
backend/hempire-interpreters/src/Hempire/Interpreter/Logging/: FastLogger.hs  Mock.hs
backend/hempire-interpreters/src/Hempire/Interpreter/Time/: Mock.hs
backend/hempire/hempire-effects/: hempire-effects.cabal
backend/hempire/hempire-effects/src/Hempire/: Prelude.hs
backend/hempire/hempire-effects/src/Hempire/Effect/: Auth.hs  Cache.hs  CustomerContext.hs  Database.hs  Events.hs  HempireError.hs  IdGen.hs  Logging.hs  Messaging.hs  Time.hs
backend/hempire/hempire-interpreters/: hempire-interpreters.cabal
backend/hempire/hempire-interpreters/src/Hempire/: AppEnv.hs
backend/hempire/hempire-interpreters/src/Hempire/Interpreter/: CustomerContext.hs  Telemetry.hs
backend/hempire/hempire-interpreters/src/Hempire/Interpreter/Auth/: IORef.hs  Jwt.hs  Mock.hs
backend/hempire/hempire-interpreters/src/Hempire/Interpreter/Cache/: Mock.hs  Redis.hs
backend/hempire/hempire-interpreters/src/Hempire/Interpreter/Database/: Mock.hs  Postgres.hs
backend/hempire/hempire-interpreters/src/Hempire/Interpreter/Events/: Mock.hs  Outbox.hs
backend/hempire/hempire-interpreters/src/Hempire/Interpreter/IdGen/: Mock.hs  Real.hs
backend/hempire/hempire-interpreters/src/Hempire/Interpreter/Logging/: FastLogger.hs  Mock.hs
backend/hempire/hempire-interpreters/src/Hempire/Interpreter/Messaging/: Kafka.hs
backend/hempire/hempire-interpreters/src/Hempire/Interpreter/Time/: Mock.hs  System.hs
backend/hempire/hempire-public/: hempire-public.cabal
backend/hempire/hempire-public/src/Hempire/: DomainId.hs  Env.hs  Id.hs  Identity.hs
backend/hempire/hempire-public/test/: Main.hs
backend/hempire/hempire-public/test/Hempire/: DomainIdSpec.hs
backend/ledger-api/: ledger-api.cabal
backend/ledger-api/src/Ledger/: Handlers.hs
backend/ledger-core/: ledger-core.cabal
backend/ledger-core/src/Ledger/: Core.hs
backend/ledger-core/src/Ledger/Core/: Domain.hs  Entry.hs  Repository.hs
backend/ledger-core/test/: Main.hs
backend/ledger-core/test/Ledger/Core/: ValidationSpec.hs
backend/ledger-interpreters/: ledger-interpreters.cabal
backend/ledger-interpreters/src/Ledger/Interpreter/Repository/: Postgres.hs
backend/ledger-interpreters/test/: Main.hs
backend/ledger-interpreters/test/Ledger/Core/: EntrySpec.hs
backend/ledger-public/: ledger-public.cabal
backend/ledger-worker/: ledger-worker.cabal
backend/ledger-worker/src/: Main.hs
backend/ledger-worker/src/Ledger/Worker/: Handler.hs
backend/outbox-sender/: outbox-sender.cabal
backend/outbox-sender/src/: Main.hs
backend/scripts/: format
docker/: backend.Dockerfile  crm-api.Dockerfile  crm-worker.Dockerfile  init-dbs.sh  ledger-api.Dockerfile  ledger-worker.Dockerfile  web.Dockerfile
docker/observability/: loki.yaml  otel-collector.yaml  prometheus.yml  promtail.yaml  tempo.yaml
docs/: zitadel-setup.md
web/: components.json  eslint.config.js  package-lock.json  package.json  svelte.config.js
web/migrations/: 000001_init.up.sql  000002_users.up.sql  000004_finance.down.sql  000004_finance.up.sql
web/patches/: kafkajs@2.2.4.patch
web/src/: app.d.ts  hooks.server.ts
(+65 files in other folders)
