cabal-version: 3.0
name:          crm-core
version:       0.1.0.0
synopsis:      CRM business logic and effect definitions
license:       NONE

common shared
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    TemplateHaskell
    TypeFamilies
  ghc-options: -Wall

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
    Crm.Core
    Crm.Core.Domain
    Crm.Core.Customer
    Crm.Core.Repository
  build-depends:
    , base              ^>=4.20
    , crm-public
    , hempire-effects
    , effectful-core    ^>=2.3
    , effectful-th      ^>=1.0
    , aeson             ^>=2.2
    , optics-core       ^>=0.4
    , text
    , time

test-suite crm-core-test
  import:           shared
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Crm.Core.CustomerSpec
  hs-source-dirs:   test
  build-depends:
    , base
    , crm-core
    , crm-public
    , hempire-effects
    , tasty             ^>=1.5
    , tasty-hunit       ^>=0.10
    , text
