cabal-version: 3.0
name:          crm-interpreters
version:       0.1.0.0
synopsis:      PostgreSQL and mock interpreters for Crm.Core.Repository
license:       NONE

common shared
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveAnyClass
  ghc-options: -Wall

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
    Crm.Interpreter.Repository.Postgres
    Crm.Interpreter.Repository.Mock
  build-depends:
    , base                ^>=4.20
    , crm-core
    , crm-public
    , hempire-effects
    , hempire-interpreters
    , effectful-core      ^>=2.3
    , containers
    , postgresql-simple   ^>=0.7
    , text
    , time

test-suite crm-interpreters-test
  import:           shared
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Crm.Core.ContactSpec
  hs-source-dirs:   test
  build-depends:
    , base
    , crm-core
    , crm-interpreters
    , crm-public
    , hempire-effects
    , hempire-interpreters
    , effectful           ^>=2.3
    , containers
    , stm
    , tasty               ^>=1.5
    , tasty-hunit         ^>=0.10
    , text
    , time
