cabal-version: 3.0
name:          crm-public
version:       0.1.0.0
synopsis:      CRM domain types — events, commands, responses
license:       NONE

library
  exposed-modules:  Crm.Types
  hs-source-dirs:   src
  default-language:   GHC2024
  default-extensions: DeriveAnyClass
  ghc-options:        -Wall
  build-depends:
    , base   ^>=4.20
    , aeson  ^>=2.2
    , text
    , time
