cabal-version: 3.0
name:          crm-worker
version:       0.1.0.0
synopsis:      CRM Kafka command consumer and event reactor
license:       NONE

common shared
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveAnyClass
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable crm-worker
  import:           shared
  main-is:          Main.hs
  other-modules:    Crm.Worker.Handler
  hs-source-dirs:   src
  build-depends:
    , base              ^>=4.20
    , crm-public
    , crm-core
    , crm-interpreters
    , hempire-effects
    , hempire-interpreters
    , effectful         ^>=2.3
    , aeson             ^>=2.2
    , bytestring
    , hw-kafka-client   ^>=5.3
    , text
