cabal-version: 3.0
name:          hempire-effects
version:       0.1.0.0
synopsis:      Shared algebraic effect definitions for hempire backend services
license:       NONE

common shared
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveAnyClass
    TemplateHaskell
    TypeFamilies
  ghc-options: -Wall

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
    Hempire.Effect.Auth
    Hempire.Effect.Database
    Hempire.Effect.Events
    Hempire.Effect.Logging
    Hempire.Effect.Time
    Hempire.Prelude
  build-depends:
    , base              ^>=4.20
    , effectful         ^>=2.3
    , effectful-core    ^>=2.3
    , effectful-th      ^>=1.0
    , aeson             ^>=2.2
    , containers
    , postgresql-simple ^>=0.7
    , text
    , time
