cabal-version: 3.0
name:          hempire-interpreters
version:       0.1.0.0
synopsis:      Interpreters for hempire-effects (PostgreSQL, fast-logger, etc.)
license:       NONE

common shared
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveAnyClass
  ghc-options: -Wall

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
    Hempire.AppEnv
    Hempire.Interpreter.Database.Postgres
    Hempire.Interpreter.Database.Mock
    Hempire.Interpreter.Time.System
    Hempire.Interpreter.Time.Mock
    Hempire.Interpreter.Auth.IORef
    Hempire.Interpreter.Auth.Mock
    Hempire.Interpreter.Events.Outbox
    Hempire.Interpreter.Events.Mock
    Hempire.Interpreter.Logging.FastLogger
    Hempire.Interpreter.Logging.Mock
  build-depends:
    , base              ^>=4.20
    , hempire-effects
    , effectful         ^>=2.3
    , effectful-core    ^>=2.3
    , aeson             ^>=2.2
    , bytestring
    , containers
    , fast-logger       ^>=3.2
    , postgresql-simple ^>=0.7
    , resource-pool     ^>=0.4
    , stm
    , text
    , time
