cabal-version: 3.0
name:          ledger-interpreters
version:       0.1.0.0
synopsis:      PostgreSQL and mock interpreters for Ledger.Core.Repository
license:       NONE

common shared
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveAnyClass
  ghc-options: -Wall

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
    Ledger.Interpreter.Repository.Postgres
    Ledger.Interpreter.Repository.Mock
  build-depends:
    , base                ^>=4.20
    , ledger-core
    , ledger-public
    , hempire-effects
    , hempire-interpreters
    , effectful-core      ^>=2.3
    , containers
    , postgresql-simple   ^>=0.7
    , text
    , time

test-suite ledger-interpreters-test
  import:           shared
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Ledger.Core.EntrySpec
  hs-source-dirs:   test
  build-depends:
    , base
    , ledger-core
    , ledger-interpreters
    , ledger-public
    , hempire-effects
    , hempire-interpreters
    , effectful           ^>=2.3
    , containers
    , stm
    , tasty               ^>=1.5
    , tasty-hunit         ^>=0.10
    , text
    , time
