cabal-version: 3.0
name:          ledger-worker
version:       0.1.0.0
synopsis:      Ledger Kafka command consumer and event reactor
license:       NONE

common shared
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveAnyClass
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable ledger-worker
  import:           shared
  main-is:          Main.hs
  other-modules:    Ledger.Worker.Handler
  hs-source-dirs:   src
  build-depends:
    , base              ^>=4.20
    , ledger-public
    , ledger-core
    , ledger-interpreters
    , hempire-effects
    , hempire-interpreters
    , effectful         ^>=2.3
    , aeson             ^>=2.2
    , bytestring
    , hw-kafka-client   ^>=5.3
    , text
