cabal-version: 3.0
name:          outbox-sender
version:       0.1.0.0
build-type:    Simple

executable outbox-sender
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded -rtsopts
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    OverloadedRecordDot
  build-depends:
    , base
    , hempire-effects
    , hempire-interpreters
    , effectful-core    ^>=2.3
    , postgresql-simple ^>=0.7
    , resource-pool     ^>=0.4
    , hw-kafka-client
    , text
    , bytestring
    , async
    , warp                       ^>=3.4
    , wai                        ^>=3.2
    , hs-opentelemetry-sdk       ^>=1.0
    , hs-opentelemetry-api       ^>=1.0
    , hs-opentelemetry-exporter-otlp ^>=1.0
    , prometheus-client          ^>=1.1
    , wai-middleware-prometheus  ^>=1.0
