cabal-version: 3.0
name:          crm-api-internal
version:       0.1.0.0
synopsis:      CRM internal HTTP API (invite management + customer deactivation)
license:       NONE

executable crm-api-internal
  main-is:          Main.hs
  other-modules:
    Crm.Auth
    Crm.Handlers
  hs-source-dirs:   src
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DuplicateRecordFields
    TypeFamilies
    DeriveAnyClass
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                  ^>=4.20
    , crm-public
    , crm-core
    , crm-interpreters
    , hempire-public
    , hempire-effects
    , hempire-interpreters
    , aeson                 ^>=2.2
    , bytestring
    , effectful             ^>=2.3
    , jose                  ^>=0.11
    , servant               ^>=0.20
    , servant-server        ^>=0.20
    , text
    , wai                   ^>=3.2
    , warp                  ^>=3.4
    , hs-opentelemetry-sdk                   ^>=1.0
    , hs-opentelemetry-api                   ^>=1.0
    , hs-opentelemetry-exporter-otlp         ^>=1.0
    , hs-opentelemetry-instrumentation-wai   ^>=1.0
    , prometheus-client                      ^>=1.1
    , wai-middleware-prometheus              ^>=1.0
    , data-default                           ^>=0.7
    , uuid                                   ^>=1.3
