cabal-version: 3.0
name:          crm-api
version:       0.1.0.0
synopsis:      CRM HTTP API service
license:       NONE

executable crm-api
  main-is:          Main.hs
  other-modules:
    Crm.Auth
    Crm.Handlers
  hs-source-dirs:   src
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DuplicateRecordFields
    TypeFamilies
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                  ^>=4.20
    , crm-public
    , crm-core
    , crm-interpreters
    , hempire-effects
    , hempire-interpreters
    , aeson                 ^>=2.2
    , bytestring
    , effectful             ^>=2.3
    , http-client           ^>=0.7
    , http-client-tls       ^>=0.3
    , jose                  ^>=0.11
    , lens
    , servant               ^>=0.20
    , servant-server        ^>=0.20
    , text
    , wai                   ^>=3.2
    , warp                  ^>=3.4
