cabal-version: 3.0
name:          crm-core
version:       0.1.0.0
synopsis:      CRM business logic and effect definitions
license:       NONE

common shared
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    TemplateHaskell
    TypeFamilies
  ghc-options: -Wall

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
    Crm.Core
    Crm.Core.Domain
    Crm.Core.Idp
    Crm.Core.Customer
    Crm.Core.Repository
  build-depends:
    , base              ^>=4.20
    , crm-public
    , hempire-public
    , hempire-effects
    , effectful         ^>=2.3
    , effectful-core    ^>=2.3
    , effectful-th      ^>=1.0
    , aeson             ^>=2.2
    , optics-core       ^>=0.4
    , text
    , time

test-suite crm-core-test
  import:           shared
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Crm.Core.CustomerSpec
    Crm.Interpreter.Idp.Mock
    Crm.Interpreter.Repository.Mock
  hs-source-dirs:   test
  build-depends:
    , base
    , crm-core
    , crm-public
    , hempire-public
    , hempire-effects
    , hempire-interpreters
    , effectful         ^>=2.3
    , containers
    , optics-core       ^>=0.4
    , stm
    , tasty             ^>=1.5
    , tasty-hunit       ^>=0.10
    , text
    , time
