cabal-version: 3.0
name:          crm-interpreters
version:       0.1.0.0
synopsis:      PostgreSQL and HTTP interpreters for CRM effects
license:       NONE

common shared
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
  ghc-options: -Wall

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
    Crm.AppEnv
    Crm.Interpreter.Error
    Crm.Interpreter.Idp.Zitadel
    Crm.Interpreter.Repository.Postgres
  build-depends:
    , base                  ^>=4.20
    , crm-core
    , crm-public
    , hempire-public
    , hempire-effects
    , hempire-interpreters
    , effectful-core        ^>=2.3
    , aeson                 ^>=2.2
    , base64-bytestring     ^>=1.2
    , bytestring
    , containers
    , http-client           ^>=0.7
    , http-client-tls       ^>=0.3
    , http-types            ^>=0.12
    , optics-core           ^>=0.4
    , postgresql-simple     ^>=0.7
    , text
    , time
