cabal-version: 3.0
name:          crm-public
version:       0.1.0.0
synopsis:      CRM domain types — events, commands, responses
license:       NONE

library
  exposed-modules:
    Crm.Types
    Crm.Types.Invite
    Crm.Types.Command
    Crm.Types.Event
    Crm.Types.Response
  hs-source-dirs:   src
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    TemplateHaskell
    UndecidableInstances
  ghc-options:        -Wall
  build-depends:
    , base             ^>=4.20
    , hempire-public
    , aeson            ^>=2.2
    , http-api-data    ^>=0.7
    , optics-th        ^>=0.4
    , text
    , time
