cabal-version: 3.0
name:          hempire-interpreters
version:       0.1.0.0
synopsis:      Interpreters for hempire-effects (PostgreSQL, fast-logger, etc.)
license:       NONE

common shared
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveAnyClass
  ghc-options: -Wall

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
    Hempire.AppEnv
    Hempire.Interpreter.Telemetry
    Hempire.Interpreter.Auth.IORef
    Hempire.Interpreter.Auth.Jwt
    Hempire.Interpreter.Auth.Mock
    Hempire.Interpreter.Cache.Mock
    Hempire.Interpreter.Cache.Redis
    Hempire.Interpreter.CustomerContext
    Hempire.Interpreter.Database.Postgres
    Hempire.Interpreter.Database.Mock
    Hempire.Interpreter.Events.Outbox
    Hempire.Interpreter.Events.Mock
    Hempire.Interpreter.Messaging.Kafka
    Hempire.Interpreter.IdGen.Real
    Hempire.Interpreter.IdGen.Mock
    Hempire.Interpreter.Logging.FastLogger
    Hempire.Interpreter.Logging.Mock
    Hempire.Interpreter.Time.System
    Hempire.Interpreter.Time.Mock
  build-depends:
    , base              ^>=4.20
    , hempire-public
    , hempire-effects
    , effectful         ^>=2.3
    , effectful-core    ^>=2.3
    , aeson             ^>=2.2
    , base64-bytestring ^>=1.2
    , bytestring
    , containers
    , cryptohash-sha256 ^>=0.11
    , fast-logger       ^>=3.2
    , hedis             >= 0.14
    , http-client       ^>=0.7
    , http-client-tls   ^>=0.3
    , jose              ^>=0.11
    , lens
    , transformers
    , postgresql-simple ^>=0.7
    , resource-pool     ^>=0.4
    , stm
    , text
    , time
    , uuid              ^>=1.3
    , hw-kafka-client
    , hs-opentelemetry-api                         ^>=1.0
    , hs-opentelemetry-instrumentation-http-client ^>=1.0
