cabal-version: 3.0
name:          hempire-public
version:       0.1.0.0
synopsis:      Platform-wide shared types (IDs, identity) with minimal dependencies
license:       NONE

common shared
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    DeriveAnyClass
    TemplateHaskell
    TypeFamilies
  ghc-options: -Wall

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
    Hempire.DomainId
    Hempire.Env
    Hempire.Id
    Hempire.Identity
  build-depends:
    , base              ^>=4.20
    , aeson             ^>=2.2
    , http-api-data     ^>=0.7
    , optics-th         ^>=0.4
    , optics-core       ^>=0.4
    , template-haskell
    , text

test-suite hempire-public-test
  import:           shared
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Hempire.DomainIdSpec
  hs-source-dirs:   test
  build-depends:
    , base
    , hempire-public
    , tasty             ^>=1.5
    , tasty-hunit       ^>=0.10
    , text
